Fix: cleaned up the spacing on the homepage and category pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,6 +93,7 @@ footer {
 .nerd-page-subheading {
     font-weight: 300;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .nerd-featured-container {
